# rust-cli-pomodoro

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  result
src/: configuration.rs  database.rs  error.rs  ipc.rs  line_handler.rs  lmdb_databbase.rs  main.rs  sled_databbase.rs
src/command/: application.rs  util.rs
src/command/handler/: uds_client.rs  user_input.rs
src/notification/: archived_notification.rs  mod.rs  notify.rs
